// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-postalcodefield Default 1`] = `
<div
  class="m-input-style m-maskedlfield m-postalcodefield m--has-value m--is-tag-default"
  postalcodeformat="ca"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            id="mPostalcodefield-fakeId"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-maskedfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-maskedfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-postalcodefield France 1`] = `
<div
  class="m-input-style m-maskedlfield m-postalcodefield m--has-value m--is-tag-default"
  postalcodeformat="fr"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            id="mPostalcodefield-fakeId"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-maskedfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-maskedfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-postalcodefield Other 1`] = `
<div
  class="m-input-style m-maskedlfield m-postalcodefield m--has-value m--is-tag-default"
  postalcodeformat="other"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            id="mPostalcodefield-fakeId"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-maskedfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-maskedfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-postalcodefield United States 1`] = `
<div
  class="m-input-style m-maskedlfield m-postalcodefield m--has-value m--is-tag-default"
  postalcodeformat="us"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            id="mPostalcodefield-fakeId"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-maskedfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-maskedfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-postalcodefield With Label And Error 1`] = `
<div
  class="m-input-style m-maskedlfield m-postalcodefield m--is-label-up m--has-error m--has-label m--has-value m--has-validation-message m--is-tag-default"
  postalcodeformat="ca"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mPostalcodefield-fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Postal code
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            aria-invalid="true"
            id="mPostalcodefield-fakeId"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-maskedfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-maskedfield__validation-message"
      >
        <p
          aria-live="polite"
          class="m-validation-message__error"
        >
          <svg
            class="m-svg m-validation-message__icon"
            height="1em"
            width="1em"
          >
            <title>
              Erreur
            </title>
          </svg>
           
          <span
            class="m-validation-message__text"
          >
            Invalid postal code with a long long long long long message error
          </span>
        </p>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-postalcodefield With Label Up And Full Width 1`] = `
<div
  class="m-input-style m-maskedlfield m-postalcodefield m--is-label-up m--has-label m--is-tag-default"
  postalcodeformat="ca"
  style="width: 100%; max-width: 100%;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mPostalcodefield-fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Postal code
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            id="mPostalcodefield-fakeId"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-maskedfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-maskedfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-postalcodefield With Not Postal Code Default Value 1`] = `
<div
  class="m-input-style m-maskedlfield m-postalcodefield m--has-value m--is-tag-default"
  postalcodeformat="ca"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            id="mPostalcodefield-fakeId"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-maskedfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-maskedfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-postalcodefield With Value 1`] = `
<div
  class="m-input-style m-maskedlfield m-postalcodefield m--has-value m--is-tag-default"
  postalcodeformat="ca"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            id="mPostalcodefield-fakeId"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-maskedfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-maskedfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;
